2.0.3
- clean lyrics before saving

2.0.2
- remove xbmcgui.lock() and xbmcgui.unlock()

2.0.1
- handle ACTION_NAV_BACK to close the script(id 92)
- use xbmc.log()

2.0.0
- fork for Eden
- changed: "xbmc.python" version="1.0" to "2.0"
- removed: lyricswiki, just not worth it
- cosmetics

1.0.2
- fixed: decode Lyricsmode and Lyricstime pages using 'decode("ISO-8859-1")', thx Anssi

1.0.1
- added: two more scrapers Lyricsmode and Lyricstime

1.0.0
- changed: more os.getcwd() found

0.9.9
- changed: use getAddonInfo('path') instead of os.getcwd()

0.9.8
- fixed: script wouldn't detect song change with .mp3 + .cue or .flac + .cue files. Thanks pike!

0.9.7
- cosmetics

0.9.6
- search for title/song name with special characters is now possible

0.9.5
- updated German translation, thanks mad-max

0.9.4
- fixed: loading of incorect lyrics since 0.9.3
- added: option to save embeded lyrics to file
thanks paco for the report

0.9.3
- fixed: use embedded lyrics if they exist, enabled by default. thanks paco for reporting it missing

0.9.2
- fixed: replace ":" in song name with "_"

0.9.1
- added: german translation, thanks mad-max

0.9.0
- make strings translatable, thanks alanwww1 for the patch

0.8.9
- added new icon

0.8.8
- reverted previously deleted Hungarian translation

0.8.7
- fixed: displaying lyrics for next song

0.8.6
- fixed: do not c/p script IDs

0.8.5
- using xbmcaddon for languages and settings
- new settings layout includes categories

0.8.4
- version change , works with r30548

0.8.3
- fixed: lyrics folder should be "userdata/addon_data/lyrics"

0.8.2 
- Initial Commit