@@ -1,5 +1,6 @@
 2.0.3
 - clean lyrics before saving
+- clean search string further for better matching, thx DDDamian for that
 
 2.0.2
 - remove xbmcgui.lock() and xbmcgui.unlock()
